AAE-49652 Consolidate task and processInstance batch count endpoint
